[gd_scene load_steps=6 format=3 uid="uid://ccwf5br4qulpl"]

[ext_resource type="Texture2D" uid="uid://bh4r2l51dfo8i" path="res://JUEGO/MyAssets/Fondos/FondoMenuPrincipal.png" id="1_c7a87"]
[ext_resource type="Script" uid="uid://c6pfyftyxlsvg" path="res://JUEGO/Scenes/MenuPrincipal/menu_principal.gd" id="1_jobek"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jobek"]
bg_color = Color(0.936647, 0.789046, 0.224345, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c7a87"]
bg_color = Color(0.6, 0.6, 0.6, 0.345098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p050g"]
bg_color = Color(0.937255, 0.788235, 0.223529, 1)

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jobek")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.385493, 0.385492, 0.385492, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_c7a87")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -149.5
offset_right = 172.0
offset_bottom = 149.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_jobek")
theme_override_styles/normal = SubResource("StyleBoxFlat_c7a87")
text = "JUGAR
"

[node name="opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_p050g")
theme_override_styles/normal = SubResource("StyleBoxFlat_c7a87")
text = "OPCIONES"

[node name="salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_p050g")
theme_override_styles/normal = SubResource("StyleBoxFlat_c7a87")
text = "SALIR"

[connection signal="pressed" from="VBoxContainer/jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/salir" to="." method="_on_salir_pressed"]
